# Relus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/user_config/: default_job.json  default_job2.json  my2pg.json
common/: Cargo.toml
common/src/: data_source_config.rs  interface.rs  job_config.rs  lib.rs  logging.rs
connector-rdbms/: Cargo.toml
connector-rdbms/src/: connector.rs  lib.rs  metadata.rs  pool.rs  schema.rs  sql_builder.rs  util.rs
core/: Cargo.toml
core/doc/: PIPELINE_DESIGN.md
core/examples/: test_config_watch.rs  test_schema_discovery.rs  test_sync_minimal.rs  test_sync_simple.rs  test_update_config.rs
core/src/: core.rs  lib.rs
core/tests/: cli_sync_test.rs
data_trans_cli/: Cargo.toml  README.md
data_trans_cli/src/: main.rs
data_trans_cli/user_config/: default_job2.json
data_trans_common/: Cargo.toml
data_trans_common/src/: job_config.rs  lib.rs  pipeline.rs  resp.rs  types.rs
data_trans_core/: Cargo.toml  defaults.json
data_trans_core/.claude/: settings.local.json
data_trans_core/benches/: pipeline_throughput.rs
data_trans_core/examples/: test_config_watch.rs  test_sync_minimal.rs  test_sync_simple.rs  test_update_config.rs
data_trans_core/src/: lib.rs
data_trans_reader/: Cargo.toml
data_trans_reader/src/: api_reader.rs  database_reader.rs  lib.rs
data_trans_reader/src/rdbms_reader_util/: mod.rs  rdbms_reader.rs
data_trans_reader/src/rdbms_reader_util/util/: client_tool.rs  dbpool.rs  dbutil.rs  mod.rs  pipeline_mapper.rs  reader_split_util.rs
data_trans_writer/: Cargo.toml
data_trans_writer/examples/: test_writer_basic.rs  test_writer_batch.rs  test_writer_transaction.rs  test_writer_upsert.rs
data_trans_writer/src/: database_writer.rs  lib.rs  types.rs
data_trans_writer/src/rdbms_writer_util/: mod.rs  rdbms_writer.rs
data_trans_writer/src/rdbms_writer_util/util/: mod.rs  writer_split_util.rs
data_trans_writer/tests/: integration_test.rs  sql_builder_test.rs  types_test.rs
my_app/rust/: Cargo.toml
reader/: Cargo.toml
writer/: Cargo.toml
(+51 files in other folders)
