[package]
name = "relus-cli"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }


[package.metadata.packager]
# 1. 全局配置
formats = ["nsis"]
before-packaging-command = "cargo build --release"
# # 如果有资源文件，也放在这里
# resources = ["configs/**/*"]

[[bin]]
name = "relus-cli"
path = "src/main.rs"

[dependencies]
data_trans_core = { path = "../data_trans_core" }
data_trans_common = { path = "../data_trans_common" }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
