[package]
name = "data_trans_writer"
version = { workspace = true }
edition = { workspace = true }

[lib]
path = "src/lib.rs"

[dependencies]
data_trans_common = { path = "../data_trans_common" }
data_trans_reader = { path = "../data_trans_reader" }

tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
